--- a/Developer/ProgrammingGuide/cover.tex
+++ b/Developer/ProgrammingGuide/cover.tex
@@ -6,10 +6,12 @@
 \usepackage[vcentering,pdftex]{geometry}
 \usepackage[absolute]{textpos}
 
-\geometry{papersize={1224pt,860pt}}
+\geometry{papersize={1227.62pt,860pt}}
 
 \newcommand{\boxwidth}{5in}
 \newcommand{\spacewidth}{604pt}
+\newcommand{\spinewidth}{19.62pt}
+
 \setlength{\evensidemargin}{39.76274pt}
 \setlength{\oddsidemargin}{39.76274pt}
 
@@ -20,12 +22,16 @@
 \begin{document}
 \thispagestyle{empty}
 
-\begin{textblock}{}(15.95,4.42)
+\begin{textblock}{}(16.01,4.42)
   \begin{rotate}{270}
-    \setlength{\fboxsep}{2.3mm} 
-    \colorbox{red}{\textsf{\bfseries\Large\textcolor{white}{{\hspace{8.3mm}Equalizer
-            0.9 Programming and User Guide\hspace{8.3mm}}}}}
+    \setlength{\fboxsep}{5pt} 
+    \colorbox{red}{\textsf{\bfseries\LARGE\textcolor{white}{{\hspace{12pt}Equalizer
+            Programming and User Guide\hspace{12pt}}}}}
   \end{rotate}
+\end{textblock}
+
+\begin{textblock}{}(15.9,15)
+  {\Large 1.0}
 \end{textblock}
 
 \vfill
@@ -38,7 +44,7 @@
 \vfill
 \hspace{-128pt}
   \includegraphics[width=604pt]{images/teaserBack.pdf}
-  \hspace{16.38pt}
+  \hspace{\spinewidth}
   \includegraphics[width=604pt]{images/teaser.pdf}
 \\
 \vfill
@@ -46,7 +52,7 @@
 \parbox[t]{\boxwidth}{ \center{\Large The official reference for developing and
     deploying parallel, scalable OpenGL\texttrademark\ applications
     based on the Equalizer parallel rendering framework }\\\vspace{1cm}
-  {\Large Revision 1.6 for Equalizer 0.9}\\[\medskipamount]
+  {\Large Revision 1.8 for Equalizer 1.0}\\[\medskipamount]
 }
 
 \end{document}
